--- a/InoutBoard.Web/Web.config
+++ b/InoutBoard.Web/Web.config
@@ -19,8 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <roleManager enabled="true" />
-    <compilation debug="true" targetFramework="4.5">
+    <compilation debug="false" targetFramework="4.5">
       <assemblies>
         <add assembly="WebMatrix.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
         <add assembly="WebMatrix.WebData, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
