--- a/InoutBoard.Web/packages.config
+++ b/InoutBoard.Web/packages.config
@@ -35,6 +35,7 @@
   <package id="SignalR.Hosting.AspNet" version="0.5.3" targetFramework="net45" />
   <package id="SignalR.Hosting.Common" version="0.5.3" targetFramework="net45" />
   <package id="SignalR.Js" version="0.5.3" targetFramework="net45" />
+  <package id="SignalR.Ninject" version="0.5.0" targetFramework="net45" />
   <package id="SignalR.Server" version="0.5.3" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="2.1.0.1" targetFramework="net45" />
   <package id="WebActivator" version="1.5.1" targetFramework="net45" />
